--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Portfolio",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,12 +24,15 @@
             ],
             "styles": [
               "src/styles.css"
+             
             ],
             "scripts": [],
             "es5BrowserSupport": true
           },
           "configurations": {
             "production": {
+              "baseHref": "/",
+              "deployUrl": "https://github.com/bhavdip13/portfolio.git",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
